<resources>
    <string name="app_name">HSIMP</string>
    <string name="title">How secure is my password?</string>
    <string name="about_message">2019 © Arctosoft\nVersion 1.6</string>

    <string name="input">Input password:</string>
    <string name="info">Information</string>
    <string name="tips">Password tips</string>

    <string name="pwd_title">Password generator</string>
    <string name="pwd_message">Drag the slider to select a password length and click generate</string>
    <string name="pwd_copy">Copy</string>
    <string name="pwd_generate">Generate</string>
    <string name="pwd_notice_bad">Passwords that are less than 8 characters long are not recommended!</string>
    <string name="pwd_notice_good">Passwords that are more than 15 characters long are secure!</string>
    <string name="pwd_copied">Password copied to clipboard.</string>

    <string name="privacy_policy_title">Privacy policy</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="launcher_title">Welcome to How secure is my password!</string>
    <string name="launcher_message">Please read and agree to the privacy policy in order to use the app.</string>
    <string name="launcher_agree">I have read and agree to the Privacy Policy</string>
    <string name="launcher_personalised_ads">Display personalised ads</string>

    <string name="cb_showadvanced">Show advanced options</string>
    <string name="cb_lowercase">Lower case letters (\"a b c\")</string>
    <string name="cb_uppercase">Upper case letters (\"A B C\")</string>
    <string name="cb_numbers">Numbers (\"1 2 3\")</string>
    <string name="cb_specialchar">Special characters (\"# % @ &amp; .\")</string>

    <string name="password_tips">Password tips</string>
    <string name="close">Close</string>
    <string name="generator">Generator</string>
    <string name="information">Information</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="script_license">Script license</string>

    <string name="back_button_message">Press the back button again to exit!</string>

    <string name="generator_shortcut_long_label">Password Generator</string>
    <string name="generator_shortcut_short_label">Generator</string>

    <string name="generator_chars">%1$d/%2$d characters</string>

    <string name="info_message">The data and information in this app is purely for educational purposes and does not reflect real world situations.
    \n\nThe time-to-crack is based on 10 billion calculations per second (10GHz).
    \n\nPasswords are never stored or sent over the internet. All calculations are done locally on your device.
    </string>

    <string name="tips_message"><b>Here are some tips on how to create a strong password that\'s difficult to crack:</b>\n\n
        - Your password should be at least 8 characters long. (16+ is recommended)\n\n
    - Your password should contain lower case letters (\"a b c\"), \nupper case letters (\"A B C\"), \nnumbers (\"1 2 3\") and
        \nspecial characters (\". % &amp; @\")
    \n\n- Never use the exact same password on multiple accounts/websites. If one gets hacked, all the others may be in danger.
    \n\n- Your password shouldn\'t contain words, phone numbers or other things that are associated with you, since it makes
        guessing your password easier.
    \n\n- Replacing letters with numbers (e.g. the word \"Password\" to \"P455w0rd\") does not make a password more secure. The time it takes to crack
    it is almost the same.</string>

    <string name="license_script"><b>The following license applies to the script used to check the strength of passwords:</b>
    \n\nThe MIT License (MIT)Copyright &#169; 2015, Mark Nicholas Wales / Small Hadron Collider

    \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to
    deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
    and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR
    A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

    <string name="privacy_policy_content">This Privacy Policy is available at any time from Information->About->License->Privacy Policy.\n\n

    Last updated: 2019–08-07\n\n

    Arctosoft (\"we\", \"us\") operate the application \"How Secure Is My Password\" (the \"app\", \"HSIMP\"). This text informs you of the policies regarding the collection, use and disclosure of Personal Information we receive from users of the App.\n\n

    By using HSIMP, you agree to the collection and use of information in accordance with this policy.\n\n

    <b>Information Collection And Use</b>\n
    No personally identifiable information will be collected and/or shared while you use the App.\n
    Collected information includes cookies and the device\'s Advertising ID. These may be shared with third parties to serve relevant ads.\n\n

    <b>Purpose of Use</b>\n
    The only purpose of the collected information is to serve relevant ads.\n\n

    <b>Third Party Services &amp; Cookies</b>\n
    We use third party services to serve ads. These include:\n\n

    <b>- Cookies &amp; AdMob:</b>\n
    We use banner &amp; interstitial ads in the app, (AdMob ads) to keep it free.\n\n
    &#8212; Third parties, including Google, use cookies to serve ads based on the user\'s prior visits to the App and other websites.\n\n
    &#8212; Google\'s use of advertising cookies enables it and its partners to serve ads to users of the App, based on their visit to the App and/or other sites on the Internet.\n\n
    &#8212; Other third parties may also display ads in the App. For a full list, visit adwords-vendors <i>(https://developers.google.com/third-party-ads/adwords-vendors)</i> and adx-vendors <i>(https://developers.google.com/third-party-ads/adx-vendors)</i>.\n\n
    &#8212; The user can opt out of personalised advertising by revoking consent by going to Information->About->License->Privacy Policy, and/or by visiting https://adssettings.google.com and/or https://aboutads.info.\n\n

    <b>- Cookies</b>\n
    Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your device from a web site and stored on your device\'s internal storage.\n\n
    By using the app, you agree to third-parties storing cookies on your device. If you do not agree with the usage of cookies, the app will not be usable.\n\n

    <b>Changes To This Privacy Policy</b>\n
    This Privacy Policy is effective as of 2019-08-07 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately.\n\n

    We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgement of the modifications and your consent to abide and be bound by the modified Privacy Policy.\n\n

    <b>Contact Us</b>\n
    If you have any questions about this Privacy Policy, please contact us at contact@arctosoft.com\n</string>

</resources>
