<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    tools:context=".LauncherActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/lLButtons"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/launcher_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launcher_message"
                android:textAlignment="center"
                android:textColor="@color/colorWhite" />

            <include
                layout="@layout/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp" />

            <CheckBox
                android:id="@+id/cBAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/launcher_agree"
                android:textColor="@color/colorWhite" />

            <CheckBox
                android:id="@+id/cBEU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/launcher_in_eu_and_under"
                android:textColor="@color/colorWhite" />

            <CheckBox
                android:id="@+id/cBUnderAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/launcher_under_18"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.4"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/lLButtons" />

    <LinearLayout
        android:id="@+id/lLButtons"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnDecline"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:text="@string/decline"
            android:textColor="@color/colorRed" />

        <Button
            android:id="@+id/btnAccept"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onButtonClicked"
            android:text="@string/accept" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>